--- a/Project-1/LPMC_model2_CarOwn+SocioEconWithTime.ipynb
+++ b/Project-1/LPMC_model2_CarOwn+SocioEconWithTime.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,13 +57,13 @@
     "\n",
     "\n",
     "# socio-economic factors (interacting with CarOwn)\n",
-    "CarOwn_Time = Beta('CarOwn_Female', 0, None, None, 0)\n",
-    "CarOwn_Age = Beta('Dist_Age', 0, None, None, 0)"
+    "Time_Female = Beta('Time_Female', 0, None, None, 0)\n",
+    "Time_Age = Beta('Time_Age', 0, None, None, 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,12 +95,11 @@
     "#Opt3 = public transport\n",
     "#Opt4 = driving\n",
     "\n",
-    "Opt1 = Constant1 + Total_TT1 * dur_walking + CarOwn * distance + CarOwn_Female * distance * female\n",
-    "Opt2 = Constant2 + Total_TT2 * dur_cycling + CarOwn * distance + CarOwn_Female * distance * female\n",
-    "Opt3 = Constant3 + Cost * cost_public + Total_TT3 * dur_public + CarOwn * distance +\\\n",
-    "                    CarOwn_Female * distance * female\n",
-    "Opt4 = Constant4 + Cost * cost_driving + Total_TT4 * dur_driving + CarOwn * car_ownership +\\\n",
-    "                    CarOwn * distance + CarOwn_Female * distance * female\n",
+    "Opt1 = Constant1 + Total_TT1 * dur_walking + Time_Female * dur_walking * female\n",
+    "Opt2 = Constant2 + Total_TT2 * dur_cycling + Time_Female * dur_cycling * female\n",
+    "Opt3 = Constant3 + Cost * cost_public + Total_TT3 * dur_public + Time_Female * dur_public * female\n",
+    "Opt4 = Constant4 + Cost * cost_driving + Total_TT4 * dur_driving + CarOwn * car_ownership + \\\n",
+    "        Time_Female * dur_driving * female\n",
     "    \n",
     "V = {1: Opt1,2: Opt2,3: Opt3, 4: Opt4}\n",
     "av = {1: 1,2: 1,3: 1,4: 1}"
@@ -108,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-25T08:58:09.169827Z",
@@ -122,9 +121,9 @@
      "text": [
       "Nbr of observations: 5000\n",
       "LL(0) =    -6931.472\n",
-      "LL(beta) = -3786.604\n",
+      "LL(beta) = -3786.569\n",
       "rho bar square = 0.452\n",
-      "Output file: ./model2-output/logit_lpmc_model2_CarOwn+Gender~00.html\n"
+      "Output file: ./model2-output/logit_lpmc_model2_CarOwn+Gender~04.html\n"
      ]
     },
     {
@@ -164,7 +163,7 @@
        "      <td>0.0533</td>\n",
        "      <td>27.9</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0517</td>\n",
+       "      <td>0.0516</td>\n",
        "      <td>28.7</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -174,7 +173,7 @@
        "      <td>0.175</td>\n",
        "      <td>-26.5</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.225</td>\n",
+       "      <td>0.224</td>\n",
        "      <td>-20.7</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -184,8 +183,8 @@
        "      <td>0.119</td>\n",
        "      <td>-19.9</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.16</td>\n",
-       "      <td>-14.8</td>\n",
+       "      <td>0.161</td>\n",
+       "      <td>-14.7</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -195,7 +194,7 @@
        "      <td>-26.9</td>\n",
        "      <td>0</td>\n",
        "      <td>0.173</td>\n",
-       "      <td>-19.9</td>\n",
+       "      <td>-20</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -205,57 +204,57 @@
        "      <td>-9.75</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0166</td>\n",
-       "      <td>-9.61</td>\n",
+       "      <td>-9.6</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Dist_Female</th>\n",
-       "      <td>5.71e-06</td>\n",
-       "      <td>1.8e+308</td>\n",
-       "      <td>3.18e-314</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0477</td>\n",
-       "      <td>0.00012</td>\n",
-       "      <td>1</td>\n",
+       "      <th>Time_Female</th>\n",
+       "      <td>-0.0677</td>\n",
+       "      <td>0.251</td>\n",
+       "      <td>-0.27</td>\n",
+       "      <td>0.787</td>\n",
+       "      <td>0.281</td>\n",
+       "      <td>-0.241</td>\n",
+       "      <td>0.809</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Total_TT1</th>\n",
-       "      <td>-8.21</td>\n",
-       "      <td>0.303</td>\n",
-       "      <td>-27.1</td>\n",
+       "      <td>-8.17</td>\n",
+       "      <td>0.331</td>\n",
+       "      <td>-24.7</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.481</td>\n",
-       "      <td>-17.1</td>\n",
+       "      <td>0.551</td>\n",
+       "      <td>-14.8</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Total_TT2</th>\n",
-       "      <td>-5.67</td>\n",
-       "      <td>0.453</td>\n",
-       "      <td>-12.5</td>\n",
+       "      <td>-5.64</td>\n",
+       "      <td>0.469</td>\n",
+       "      <td>-12</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.523</td>\n",
-       "      <td>-10.9</td>\n",
+       "      <td>0.546</td>\n",
+       "      <td>-10.3</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Total_TT3</th>\n",
-       "      <td>-3.33</td>\n",
-       "      <td>0.251</td>\n",
-       "      <td>-13.3</td>\n",
+       "      <td>-3.3</td>\n",
+       "      <td>0.276</td>\n",
+       "      <td>-11.9</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.254</td>\n",
-       "      <td>-13.1</td>\n",
+       "      <td>0.291</td>\n",
+       "      <td>-11.3</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Total_TT4</th>\n",
-       "      <td>-6.16</td>\n",
-       "      <td>0.345</td>\n",
-       "      <td>-17.8</td>\n",
+       "      <td>-6.13</td>\n",
+       "      <td>0.368</td>\n",
+       "      <td>-16.6</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.382</td>\n",
-       "      <td>-16.1</td>\n",
+       "      <td>0.416</td>\n",
+       "      <td>-14.7</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -263,17 +262,17 @@
        "</div>"
       ],
       "text/plain": [
-       "               Value  Std err    t-test  p-value  Rob. Std err  Rob. t-test  \\\n",
-       "CarOwn          1.48   0.0533      27.9        0        0.0517         28.7   \n",
-       "Constant2      -4.64    0.175     -26.5        0         0.225        -20.7   \n",
-       "Constant3      -2.36    0.119     -19.9        0          0.16        -14.8   \n",
-       "Constant4      -3.46    0.128     -26.9        0         0.173        -19.9   \n",
-       "Cost          -0.159   0.0163     -9.75        0        0.0166        -9.61   \n",
-       "Dist_Female 5.71e-06 1.8e+308 3.18e-314        1        0.0477      0.00012   \n",
-       "Total_TT1      -8.21    0.303     -27.1        0         0.481        -17.1   \n",
-       "Total_TT2      -5.67    0.453     -12.5        0         0.523        -10.9   \n",
-       "Total_TT3      -3.33    0.251     -13.3        0         0.254        -13.1   \n",
-       "Total_TT4      -6.16    0.345     -17.8        0         0.382        -16.1   \n",
+       "              Value  Std err  t-test  p-value  Rob. Std err  Rob. t-test  \\\n",
+       "CarOwn         1.48   0.0533    27.9        0        0.0516         28.7   \n",
+       "Constant2     -4.64    0.175   -26.5        0         0.224        -20.7   \n",
+       "Constant3     -2.36    0.119   -19.9        0         0.161        -14.7   \n",
+       "Constant4     -3.46    0.128   -26.9        0         0.173          -20   \n",
+       "Cost         -0.159   0.0163   -9.75        0        0.0166         -9.6   \n",
+       "Time_Female -0.0677    0.251   -0.27    0.787         0.281       -0.241   \n",
+       "Total_TT1     -8.17    0.331   -24.7        0         0.551        -14.8   \n",
+       "Total_TT2     -5.64    0.469     -12        0         0.546        -10.3   \n",
+       "Total_TT3      -3.3    0.276   -11.9        0         0.291        -11.3   \n",
+       "Total_TT4     -6.13    0.368   -16.6        0         0.416        -14.7   \n",
        "\n",
        "             Rob. p-value  \n",
        "CarOwn                  0  \n",
@@ -281,14 +280,14 @@
        "Constant3               0  \n",
        "Constant4               0  \n",
        "Cost                    0  \n",
-       "Dist_Female             1  \n",
+       "Time_Female         0.809  \n",
        "Total_TT1               0  \n",
        "Total_TT2               0  \n",
        "Total_TT3               0  \n",
        "Total_TT4               0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,12 +337,11 @@
     "#Opt3 = public transport\n",
     "#Opt4 = driving\n",
     "\n",
-    "Opt1 = Constant1 + Total_TT1 * dur_walking + CarOwn * distance + CarOwn_Age * distance * age\n",
-    "Opt2 = Constant2 + Total_TT2 * dur_cycling + CarOwn * distance + CarOwn_Age * distance * age\n",
-    "Opt3 = Constant3 + Cost * cost_public + Total_TT3 * dur_public + CarOwn * distance +\\\n",
-    "                    CarOwn_Age * distance * age\n",
+    "Opt1 = Constant1 + Total_TT1 * dur_walking + Time_Age * dur_walking * age\n",
+    "Opt2 = Constant2 + Total_TT2 * dur_cycling + Time_Age * dur_cycling * age\n",
+    "Opt3 = Constant3 + Cost * cost_public + Total_TT3 * dur_public + Time_Age * dur_public * age\n",
     "Opt4 = Constant4 + Cost * cost_driving + Total_TT4 * dur_driving + CarOwn * car_ownership +\\\n",
-    "                    CarOwn * distance + CarOwn_Age * distance * age\n",
+    "                    Time_Age * dur_driving * age\n",
     "    \n",
     "V = {1: Opt1,2: Opt2,3: Opt3, 4: Opt4}\n",
     "av = {1: 1,2: 1,3: 1,4: 1}"
@@ -351,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -360,9 +358,9 @@
      "text": [
       "Nbr of observations: 5000\n",
       "LL(0) =    -6931.472\n",
-      "LL(beta) = -3786.604\n",
-      "rho bar square = 0.452\n",
-      "Output file: ./model2-output/logit_lpmc_model2_CarOwn+Age.html\n"
+      "LL(beta) = -3763.172\n",
+      "rho bar square = 0.456\n",
+      "Output file: ./model2-output/logit_lpmc_model2_CarOwn+Age~02.html\n"
      ]
     },
     {
@@ -398,102 +396,102 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>CarOwn</th>\n",
-       "      <td>1.48</td>\n",
-       "      <td>0.0533</td>\n",
-       "      <td>27.9</td>\n",
+       "      <td>1.47</td>\n",
+       "      <td>0.0534</td>\n",
+       "      <td>27.6</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0517</td>\n",
-       "      <td>28.7</td>\n",
+       "      <td>0.0519</td>\n",
+       "      <td>28.4</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Constant2</th>\n",
-       "      <td>-4.64</td>\n",
+       "      <td>-4.67</td>\n",
        "      <td>0.175</td>\n",
-       "      <td>-26.5</td>\n",
+       "      <td>-26.6</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.225</td>\n",
-       "      <td>-20.7</td>\n",
+       "      <td>0.222</td>\n",
+       "      <td>-21</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Constant3</th>\n",
-       "      <td>-2.36</td>\n",
-       "      <td>0.119</td>\n",
-       "      <td>-19.9</td>\n",
+       "      <td>-2.38</td>\n",
+       "      <td>0.118</td>\n",
+       "      <td>-20.1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.16</td>\n",
-       "      <td>-14.8</td>\n",
+       "      <td>0.157</td>\n",
+       "      <td>-15.1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Constant4</th>\n",
-       "      <td>-3.46</td>\n",
+       "      <td>-3.47</td>\n",
        "      <td>0.128</td>\n",
-       "      <td>-26.9</td>\n",
+       "      <td>-27.1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.173</td>\n",
-       "      <td>-19.9</td>\n",
+       "      <td>0.171</td>\n",
+       "      <td>-20.3</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Cost</th>\n",
-       "      <td>-0.159</td>\n",
-       "      <td>0.0163</td>\n",
-       "      <td>-9.75</td>\n",
+       "      <td>-0.161</td>\n",
+       "      <td>0.0165</td>\n",
+       "      <td>-9.77</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0166</td>\n",
-       "      <td>-9.61</td>\n",
+       "      <td>0.017</td>\n",
+       "      <td>-9.48</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Dist_Age</th>\n",
-       "      <td>1.39e-05</td>\n",
-       "      <td>1.8e+308</td>\n",
-       "      <td>7.75e-314</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0014</td>\n",
-       "      <td>0.00995</td>\n",
-       "      <td>0.992</td>\n",
+       "      <th>Time_Age</th>\n",
+       "      <td>-0.0451</td>\n",
+       "      <td>0.00665</td>\n",
+       "      <td>-6.78</td>\n",
+       "      <td>1.2e-11</td>\n",
+       "      <td>0.00697</td>\n",
+       "      <td>-6.47</td>\n",
+       "      <td>9.71e-11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Total_TT1</th>\n",
-       "      <td>-8.21</td>\n",
-       "      <td>0.303</td>\n",
-       "      <td>-27.1</td>\n",
+       "      <td>-6.57</td>\n",
+       "      <td>0.375</td>\n",
+       "      <td>-17.5</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.481</td>\n",
-       "      <td>-17.1</td>\n",
+       "      <td>0.559</td>\n",
+       "      <td>-11.7</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Total_TT2</th>\n",
-       "      <td>-5.67</td>\n",
-       "      <td>0.453</td>\n",
-       "      <td>-12.5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.523</td>\n",
-       "      <td>-10.9</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-3.98</td>\n",
+       "      <td>0.511</td>\n",
+       "      <td>-7.79</td>\n",
+       "      <td>6.66e-15</td>\n",
+       "      <td>0.579</td>\n",
+       "      <td>-6.87</td>\n",
+       "      <td>6.37e-12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Total_TT3</th>\n",
-       "      <td>-3.33</td>\n",
-       "      <td>0.251</td>\n",
-       "      <td>-13.3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.254</td>\n",
-       "      <td>-13.1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-1.65</td>\n",
+       "      <td>0.343</td>\n",
+       "      <td>-4.8</td>\n",
+       "      <td>1.56e-06</td>\n",
+       "      <td>0.354</td>\n",
+       "      <td>-4.66</td>\n",
+       "      <td>3.22e-06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Total_TT4</th>\n",
-       "      <td>-6.16</td>\n",
-       "      <td>0.345</td>\n",
-       "      <td>-17.8</td>\n",
+       "      <td>-4.48</td>\n",
+       "      <td>0.417</td>\n",
+       "      <td>-10.7</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.382</td>\n",
-       "      <td>-16.1</td>\n",
+       "      <td>0.457</td>\n",
+       "      <td>-9.8</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -501,17 +499,17 @@
        "</div>"
       ],
       "text/plain": [
-       "             Value  Std err    t-test  p-value  Rob. Std err  Rob. t-test  \\\n",
-       "CarOwn        1.48   0.0533      27.9        0        0.0517         28.7   \n",
-       "Constant2    -4.64    0.175     -26.5        0         0.225        -20.7   \n",
-       "Constant3    -2.36    0.119     -19.9        0          0.16        -14.8   \n",
-       "Constant4    -3.46    0.128     -26.9        0         0.173        -19.9   \n",
-       "Cost        -0.159   0.0163     -9.75        0        0.0166        -9.61   \n",
-       "Dist_Age  1.39e-05 1.8e+308 7.75e-314        1        0.0014      0.00995   \n",
-       "Total_TT1    -8.21    0.303     -27.1        0         0.481        -17.1   \n",
-       "Total_TT2    -5.67    0.453     -12.5        0         0.523        -10.9   \n",
-       "Total_TT3    -3.33    0.251     -13.3        0         0.254        -13.1   \n",
-       "Total_TT4    -6.16    0.345     -17.8        0         0.382        -16.1   \n",
+       "            Value  Std err  t-test  p-value  Rob. Std err  Rob. t-test  \\\n",
+       "CarOwn       1.47   0.0534    27.6        0        0.0519         28.4   \n",
+       "Constant2   -4.67    0.175   -26.6        0         0.222          -21   \n",
+       "Constant3   -2.38    0.118   -20.1        0         0.157        -15.1   \n",
+       "Constant4   -3.47    0.128   -27.1        0         0.171        -20.3   \n",
+       "Cost       -0.161   0.0165   -9.77        0         0.017        -9.48   \n",
+       "Time_Age  -0.0451  0.00665   -6.78  1.2e-11       0.00697        -6.47   \n",
+       "Total_TT1   -6.57    0.375   -17.5        0         0.559        -11.7   \n",
+       "Total_TT2   -3.98    0.511   -7.79 6.66e-15         0.579        -6.87   \n",
+       "Total_TT3   -1.65    0.343    -4.8 1.56e-06         0.354        -4.66   \n",
+       "Total_TT4   -4.48    0.417   -10.7        0         0.457         -9.8   \n",
        "\n",
        "           Rob. p-value  \n",
        "CarOwn                0  \n",
@@ -519,14 +517,14 @@
        "Constant3             0  \n",
        "Constant4             0  \n",
        "Cost                  0  \n",
-       "Dist_Age          0.992  \n",
+       "Time_Age       9.71e-11  \n",
        "Total_TT1             0  \n",
-       "Total_TT2             0  \n",
-       "Total_TT3             0  \n",
+       "Total_TT2      6.37e-12  \n",
+       "Total_TT3      3.22e-06  \n",
        "Total_TT4             0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,6 +553,13 @@
     "\n",
     "pandasResults"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
