--- a/Project-1/LPMC_model2_CarOwn+SocioEconWithTime.ipynb
+++ b/Project-1/LPMC_model2_CarOwn+SocioEconWithTime.ipynb
@@ -56,7 +56,7 @@
     "CarOwn = Beta('CarOwn',0,None,None,0)\n",
     "\n",
     "\n",
-    "# socio-economic factors (interacting with CarOwn)\n",
+    "# socio-economic factors (interacting with Time)\n",
     "Time_Female = Beta('Time_Female', 0, None, None, 0)\n",
     "Time_Age = Beta('Time_Age', 0, None, None, 0)"
    ]
@@ -71,7 +71,7 @@
     "# available from the data\n",
     "\n",
     "dur_public = DefineVariable('dur_public', dur_pt_access + dur_pt_rail + dur_pt_bus + dur_pt_int ,database)\n",
-    "cost_public = DefineVariable('cost_public', cost_transit ,database)\n",
+    "cost_public = DefineVariable('cost_public', cost_transit, database)\n",
     "cost_driving = DefineVariable('cost_driving', cost_driving_fuel + cost_driving_ccharge ,database)"
    ]
   },
