--- a/Project-1/LPMC_model0.ipynb
+++ b/Project-1/LPMC_model0.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os \n",
+    "import os, glob\n",
+    "\n",
     "import pandas as pd\n",
     "import biogeme.database as db\n",
     "import biogeme.biogeme as bio\n",
@@ -351,62 +352,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Value  Std err  t-test  p-value  Rob. Std err  Rob. t-test  \\\n",
-      "Constant2  -3.87    0.103   -37.4        0         0.109        -35.3   \n",
-      "Constant3 -0.511    0.053   -9.65        0        0.0546        -9.36   \n",
-      "Constant4  -1.27   0.0738   -17.2        0        0.0825        -15.4   \n",
-      "Cost      -0.174   0.0136   -12.8        0         0.013        -13.4   \n",
-      "Total_TT   -5.47    0.183   -29.8        0         0.212        -25.8   \n",
-      "\n",
-      "           Rob. p-value  \n",
-      "Constant2             0  \n",
-      "Constant3             0  \n",
-      "Constant4             0  \n",
-      "Cost                  0  \n",
-      "Total_TT              0  \n",
       "Nbr of observations: 5000\n",
       "LL(0) =    -6931.472\n",
       "LL(beta) = -4572.870\n",
       "rho bar square = 0.34\n",
       "Output file: ./model0-output/logit_lpmc_model0.html\n"
      ]
-    }
-   ],
-   "source": [
-    "# The choice model is a logit, with availability conditions\n",
-    "output_dir = \"./model0-output\"\n",
-    "filepath = os.path.join(output_dir, \"logit_lpmc_model0\")\n",
-    "\n",
-    "if not os.path.exists(output_dir):\n",
-    "    os.mkdir(output_dir)\n",
-    "\n",
-    "logprob = loglogit(V, av, chosenAlternative)\n",
-    "biogeme  = bio.BIOGEME(database,logprob)\n",
-    "biogeme.modelName = filepath\n",
-    "results = biogeme.estimate()\n",
-    "\n",
-    "# Get the results in a pandas table\n",
-    "pandasResults = results.getEstimatedParameters()\n",
-    "print(pandasResults)\n",
-    "print(f\"Nbr of observations: {database.getNumberOfObservations()}\")\n",
-    "print(f\"LL(0) =    {results.data.initLogLike:.3f}\")\n",
-    "print(f\"LL(beta) = {results.data.logLike:.3f}\")\n",
-    "print(f\"rho bar square = {results.data.rhoBarSquare:.3g}\")\n",
-    "print(f\"Output file: {results.data.htmlFileName}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/html": [
@@ -508,12 +467,36 @@
        "Total_TT              0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# The choice model is a logit, with availability conditions\n",
+    "output_dir = \"./model0-output\"\n",
+    "filepath = os.path.join(output_dir, \"logit_lpmc_model0\")\n",
+    "\n",
+    "if not os.path.exists(output_dir):\n",
+    "    os.mkdir(output_dir)\n",
+    "    \n",
+    "# delete previously saved html and pickle\n",
+    "for file in glob.glob(f\"{filepath}*\"):\n",
+    "    os.remove(file)\n",
+    "\n",
+    "logprob = loglogit(V, av, chosenAlternative)\n",
+    "biogeme  = bio.BIOGEME(database,logprob)\n",
+    "biogeme.modelName = filepath\n",
+    "results = biogeme.estimate()\n",
+    "\n",
+    "# Get the results in a pandas table\n",
+    "pandasResults = results.getEstimatedParameters()\n",
+    "print(f\"Nbr of observations: {database.getNumberOfObservations()}\")\n",
+    "print(f\"LL(0) =    {results.data.initLogLike:.3f}\")\n",
+    "print(f\"LL(beta) = {results.data.logLike:.3f}\")\n",
+    "print(f\"rho bar square = {results.data.rhoBarSquare:.3g}\")\n",
+    "print(f\"Output file: {results.data.htmlFileName}\")\n",
+    "\n",
     "pandasResults"
    ]
   },
