--- a/Project-1/LPMC_model1_time.ipynb
+++ b/Project-1/LPMC_model1_time.ipynb
@@ -14,40 +14,157 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Value  Std err  t-test  p-value  Rob. Std err  Rob. t-test  \\\n",
-      "Constant2  -4.61    0.172   -26.8        0         0.214        -21.5   \n",
-      "Constant3  -2.27    0.114   -19.8        0         0.149        -15.2   \n",
-      "Constant4  -1.88    0.107   -17.6        0          0.15        -12.6   \n",
-      "Cost      -0.155    0.015   -10.3        0        0.0148        -10.5   \n",
-      "Total_TT1  -8.18    0.293   -27.9        0         0.453          -18   \n",
-      "Total_TT2  -5.84    0.442   -13.2        0         0.506        -11.5   \n",
-      "Total_TT3   -3.6    0.235   -15.3        0         0.241          -15   \n",
-      "Total_TT4  -6.49    0.332   -19.6        0         0.372        -17.5   \n",
-      "\n",
-      "           Rob. p-value  \n",
-      "Constant2             0  \n",
-      "Constant3             0  \n",
-      "Constant4             0  \n",
-      "Cost                  0  \n",
-      "Total_TT1             0  \n",
-      "Total_TT2             0  \n",
-      "Total_TT3             0  \n",
-      "Total_TT4             0  \n",
       "Nbr of observations: 5000\n",
       "LL(0) =    -6931.472\n",
       "LL(beta) = -4273.573\n",
       "rho bar square = 0.382\n",
-      "Output file: ./model1-output/logit_lpmc_model1_time~00.html\n"
+      "Output file: ./model1-output/logit_lpmc_model1_time.html\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Value</th>\n",
+       "      <th>Std err</th>\n",
+       "      <th>t-test</th>\n",
+       "      <th>p-value</th>\n",
+       "      <th>Rob. Std err</th>\n",
+       "      <th>Rob. t-test</th>\n",
+       "      <th>Rob. p-value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Constant2</th>\n",
+       "      <td>-4.61</td>\n",
+       "      <td>0.172</td>\n",
+       "      <td>-26.8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.214</td>\n",
+       "      <td>-21.5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Constant3</th>\n",
+       "      <td>-2.27</td>\n",
+       "      <td>0.114</td>\n",
+       "      <td>-19.8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.149</td>\n",
+       "      <td>-15.2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Constant4</th>\n",
+       "      <td>-1.88</td>\n",
+       "      <td>0.107</td>\n",
+       "      <td>-17.6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>-12.6</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cost</th>\n",
+       "      <td>-0.155</td>\n",
+       "      <td>0.015</td>\n",
+       "      <td>-10.3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0148</td>\n",
+       "      <td>-10.5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Total_TT1</th>\n",
+       "      <td>-8.18</td>\n",
+       "      <td>0.293</td>\n",
+       "      <td>-27.9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.453</td>\n",
+       "      <td>-18</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Total_TT2</th>\n",
+       "      <td>-5.84</td>\n",
+       "      <td>0.442</td>\n",
+       "      <td>-13.2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.506</td>\n",
+       "      <td>-11.5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Total_TT3</th>\n",
+       "      <td>-3.6</td>\n",
+       "      <td>0.235</td>\n",
+       "      <td>-15.3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.241</td>\n",
+       "      <td>-15</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Total_TT4</th>\n",
+       "      <td>-6.49</td>\n",
+       "      <td>0.332</td>\n",
+       "      <td>-19.6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.372</td>\n",
+       "      <td>-17.5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Value  Std err  t-test  p-value  Rob. Std err  Rob. t-test  \\\n",
+       "Constant2  -4.61    0.172   -26.8        0         0.214        -21.5   \n",
+       "Constant3  -2.27    0.114   -19.8        0         0.149        -15.2   \n",
+       "Constant4  -1.88    0.107   -17.6        0          0.15        -12.6   \n",
+       "Cost      -0.155    0.015   -10.3        0        0.0148        -10.5   \n",
+       "Total_TT1  -8.18    0.293   -27.9        0         0.453          -18   \n",
+       "Total_TT2  -5.84    0.442   -13.2        0         0.506        -11.5   \n",
+       "Total_TT3   -3.6    0.235   -15.3        0         0.241          -15   \n",
+       "Total_TT4  -6.49    0.332   -19.6        0         0.372        -17.5   \n",
+       "\n",
+       "           Rob. p-value  \n",
+       "Constant2             0  \n",
+       "Constant3             0  \n",
+       "Constant4             0  \n",
+       "Cost                  0  \n",
+       "Total_TT1             0  \n",
+       "Total_TT2             0  \n",
+       "Total_TT3             0  \n",
+       "Total_TT4             0  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Translated to .py by Meritxell Pacheco\n",
-    "# 2017\n",
-    "# Adapted to PandasBiogeme by Michel Bierlaire\n",
-    "# Sun Oct 21 23:15:31 2018\n",
-    "\n",
-    "import os \n",
+    "import os, glob \n",
     "\n",
     "import pandas as pd\n",
     "import biogeme.database as db\n",
@@ -112,6 +229,10 @@
     "if not os.path.exists(output_dir):\n",
     "    os.mkdir(output_dir)\n",
     "    \n",
+    "# delete previously saved html and pickle\n",
+    "for file in glob.glob(f\"{filepath}*\"):\n",
+    "    os.remove(file)\n",
+    "    \n",
     "# The choice model is a logit, with availability conditions\n",
     "logprob = loglogit(V,av,chosenAlternative)\n",
     "biogeme  = bio.BIOGEME(database,logprob)\n",
@@ -119,12 +240,13 @@
     "results = biogeme.estimate()\n",
     "# Get the results in a pandas table\n",
     "pandasResults = results.getEstimatedParameters()\n",
-    "print(pandasResults)\n",
     "print(f\"Nbr of observations: {database.getNumberOfObservations()}\")\n",
     "print(f\"LL(0) =    {results.data.initLogLike:.3f}\")\n",
     "print(f\"LL(beta) = {results.data.logLike:.3f}\")\n",
     "print(f\"rho bar square = {results.data.rhoBarSquare:.3g}\")\n",
-    "print(f\"Output file: {results.data.htmlFileName}\")"
+    "print(f\"Output file: {results.data.htmlFileName}\")\n",
+    "\n",
+    "pandasResults"
    ]
   },
   {
