copied likelihood ratio over

--- a/Project-1/LPMC_model2_CarOwn+SocioEconWithTime .ipynb
+++ b/Project-1/LPMC_model2_CarOwn+SocioEconWithTime .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
        "Total_TT4       5.72e-06  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,6 +376,45 @@
     "print(f\"Output file: {results.data.htmlFileName}\")\n",
     "\n",
     "pandasResults"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Let's compare this model with the previous one developped (Model 1)\n",
+    "\n",
+    "In order to compare the two models, we take this one as the unrestricted model, and Model 1 is the restricted one. Model 1 produces 8 estimates while Model 2 produces 15. Thus we have to compare our test statistic with the chi squared ditribution with 7 degrees of freedom $\\chi^2_{7}$ \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1091.9213887672895"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "LLModel_1 = -4273.573 # result copied from Model 1's notebook\n",
+    "- 2 *(LLModel_1 - results.data.logLike)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2 *(LLModel_2 - LLModel1) = 1091.921 > $\\chi^2_{7,0.99}$ = 18.475\n",
+    "\n",
+    "Thus we can reject Model1 at 99% level of confidence, and we keep Model2 as our new preferred model.\n"
    ]
   },
   {
